[tool.poetry]
name = "ipnetdb-playground"
version = "0.1.0"
description = ""
authors = ["John Anderson <lampwins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
maxminddb = "^2.2.0"
neo4j = "^5.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
